--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,21 +1,37 @@
 .page-header {
-    background-color: #818cec;
-    margin-top: 0;
-    padding: 20px 20px 20px 40px;
+    background: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR7O7jtpAlCRCEVBSGXTZ3OuhB0Cuo5lKc69DEhHkJa-r2z5kA69ApsDcBtIUFq9DE8jF4&usqp=CAU');
+	text-align: center;
+	width: 100%;
+	height: 30%;
+	background-size: cover;
+	background-attachment: fixed;
+	position: relative;
+	overflow: hidden;
+	border-radius: 0 0 85% 85% / 30%;
+    padding: 0; margin: 0; box-sizing: border-box;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
-    color: #ffffff;
-    font-size: 36pt;
-    text-decoration: none;
+    width: 100%;
+	height: 100%;
+	padding: 50px;
+	color: #FFF;
+	text-shadow: 1px 1px 1px #333;
 }
 
 .content {
-    margin-left: 40px;
+    margin-left: 50px;
 }
 
-h1, h2, h3, h4 {
-    font-family: 'Times New Roman', Times, serif;
+h1 {
+    font-family: 'Dancing Script', cursive;
+	font-size: 30px;
+	margin-bottom: 30px;
+}
+
+h2, h3, h4 {
+font-family: 'Open Sans', sans-serif;
+	margin-bottom: 25px;
 }
 
 .date {
